add baidu and google analytics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="css/Main.css" type="text/css" rel="stylesheet" />
         <script type="text/javascript" src="http://ajax.proxy.ustclug.org/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/Main.js"></script>
+        <script type="text/javascript" src="js/analytic.js"></script>
         <!-- You can you up -->
     </head>
     <body>
