--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>简历</title>
     <link href="css/Main.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="js/analytic.js"></script>
 </head>
 <body>
 
