--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Daoyuan Wang</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="UTF-8">
         <meta http-equiv="author" content="Daoyuan Wang" />
         <meta name="description" content="Homepage of Daoyuan Wang" />
         <meta name="keywords" content="Daoyuan Wang, Adrian Wang, 王道远" />
         <meta name="robots" content="nofollow" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link href="css/Main.css" type="text/css" rel="stylesheet" />
         <script type="text/javascript" src="http://ajax.proxy.ustclug.org/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/Main.js"></script>
@@ -15,6 +17,9 @@
     </head>
     <body>
         <div id="main">
+            <div id="avatar">
+                <img class="avatar" src="image/avatar.png">
+            </div>
             <h1>王道远 | Daoyuan Wang</h1>
             <p class="alarm">一个有趣的人</p>
             <div id="dy-navi">
@@ -27,8 +32,9 @@
             </div>
 
             <a class="alarm" href="/">http://daoyuan.wang</a>
-        </div>
-        <div id="footer">
+
+            <div id="footer">
+            </div>
         </div>
     </body>
 </html>
