--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="robots" content="nofollow" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link href="css/Main.css" type="text/css" rel="stylesheet" />
-        <script type="text/javascript" src="http://ajax.proxy.ustclug.org/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.proxy.ustclug.org/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/Main.js"></script>
         <script type="text/javascript" src="js/analytic.js"></script>
         <!-- You can you up -->
@@ -27,11 +27,11 @@
                 <a href="/projects.html">项目</a> |
                 <a href="/resume.html">简历</a> |
                 <a href="https://github.com/adrian-wang">Github</a> |
-                <!--a href="http://blog.daoyuan.wang/">博客</a> | -->
+                <!--a href="https://blog.daoyuan.wang/">博客</a> | -->
                 <a href="mailto:me@daoyuan.wang">联系我</a>
             </div>
 
-            <a class="alarm" href="/">http://daoyuan.wang</a>
+            <a class="alarm" href="/">https://daoyuan.wang</a>
 
             <div id="footer">
             </div>
