--- a/footer.html
+++ b/footer.html
@@ -4,4 +4,4 @@
     });
 </script>
 <div id="status"></div>
-<div id="license"><a href="http://www.miibeian.gov.cn/">苏ICP备15041437号-1</a></div>
+<div id="license"><a href="http://www.beian.miit.gov.cn/">苏ICP备15041437号-1</a></div>
