--- a/footer.html
+++ b/footer.html
@@ -4,4 +4,4 @@
     });
 </script>
 <div id="status"></div>
-<div id="license"><a href="http://beian.miit.gov.cn/">苏ICP备15041437号-1</a></div>
+<div id="license"><a href="http://beian.miit.gov.cn/">沪ICP备2025110326号-1</a></div>
