--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="/index.html">主页</a> |
                 <a href="/projects.html">项目</a> |
                 <a href="/resume.html">简历</a> |
-                <a href="https://github.com/adrian-wang">Github</a> |
+                <!--a href="https://github.com/adrian-wang">Github</a> | -->
                 <!--a href="https://blog.daoyuan.wang/">博客</a> | -->
                 <a href="mailto:me@daoyuan.wang">联系我</a>
             </div>
