--- a/footer.html
+++ b/footer.html
@@ -5,3 +5,4 @@
 </script>
 <div id="status"></div>
 <div id="license"><a href="http://beian.miit.gov.cn/">沪ICP备2025110326号-1</a></div>
+<div id="gongan"><span><img src="image/beiantubiao.png" class="icon"><a href="https://beian.mps.gov.cn/#/query/webSearch?code=31011202020921" rel="noreferrer" target="_blank">沪公网安备31011202020921号</a></span></div>
